--- a/css/trig3.css
+++ b/css/trig3.css
@@ -456,6 +456,7 @@ align-items: center;
             display: block;
             opacity: 1;
             max-height: 200px;
+            z-index: 6;
         }
        
 #video-popup-overlay {
@@ -468,6 +469,7 @@ align-items: center;
   display: none;
   justify-content: center;
   align-items: center;
+  z-index: 9;
 }
 
 #video-popup-container {
@@ -737,7 +739,7 @@ margin-top: 0px;
 body{
     height: 100vh;
     }
-}
+
    
 @media (min-width: 749px) {
 .header{  
