--- a/css/design.css
+++ b/css/design.css
@@ -417,12 +417,14 @@ video {
 }
 
 .top-nav {
-    padding: 10px;
+    padding: 7px;
     width: 90%;
+    margin-left: 10px;
     }
 
 .top-nav ul li {
-    margin-left: 10px;       
+    margin-left: 5px;       
+    margin-right: 5px;
 }
 
 .text-box {
