--- a/css/alg4.css
+++ b/css/alg4.css
@@ -355,17 +355,22 @@ text-align: center;
   }
 
  
-  #play-button:before {
-   content: "Play ▶";
+#play-button:before {
+   content: "\f04b  Play";
+   font-family: "Font Awesome 5 Free";
 }
 
+
   #return:before {
-    content: "↩ Return";}
+    content: "\f060  Return"; 
+   font-family: "Font Awesome 5 Free";
+}
 
   #restart:before {
-    content:"Restart ↻"
+    content: "\f01e  Restart"; 
+   font-family: "Font Awesome 5 Free";
   }
-  
+
   .sound-icon {
   font-size: 24px;
 
@@ -586,15 +591,23 @@ margin-bottom: 0px;
 margin-top: 0px;
 } 
 
+
 #play-button:before {
-  content: "▶";
+  content: "\f04b";
+   font-family: "Font Awesome 5 Free";
+   font-size: 30px;
 }
 
  #return:before {
-   content: "↩";}
+   content: "\f060"; 
+   font-family: "Font Awesome 5 Free";
+}
 
  #restart:before {
-   content:"↻"
+   content: "\f01e"; 
+   font-family: "Font Awesome 5 Free";
+   font-size: 30px;
+   
  }
 
 
