--- a/css/con4.css
+++ b/css/con4.css
@@ -355,15 +355,20 @@ text-align: center;
   }
 
  
-  #play-button:before {
-   content: "Play ▶";
+#play-button:before {
+   content: "\f04b  Play";
+   font-family: "Font Awesome 5 Free";
 }
 
+
   #return:before {
-    content: "↩ Return";}
+    content: "\f060  Return"; 
+   font-family: "Font Awesome 5 Free";
+}
 
   #restart:before {
-    content:"Restart ↻"
+    content: "\f01e  Restart"; 
+   font-family: "Font Awesome 5 Free";
   }
   
   .sound-icon {
@@ -580,6 +585,7 @@ align-items: center;
   padding: 8px;
   font-size: 15px;
 }
+            
 #question { 
 font-size: 15px; 
 margin-bottom: 0px;
@@ -587,16 +593,22 @@ margin-top: 0px;
 } 
 
 #play-button:before {
-  content: "▶";
+  content: "\f04b";
+   font-family: "Font Awesome 5 Free";
+   font-size: 30px;
 }
 
  #return:before {
-   content: "↩";}
+   content: "\f060"; 
+   font-family: "Font Awesome 5 Free";
+}
 
  #restart:before {
-   content:"↻"
+   content: "\f01e"; 
+   font-family: "Font Awesome 5 Free";
+   font-size: 30px;
+   
  }
-
 
  .header {
   position: relative;
