--- a/css/design.css
+++ b/css/design.css
@@ -208,7 +208,7 @@ button a:hover {
     height: 550px; 
     margin-left: 170px;
     margin-bottom: 40px;
-    margin-top: 0;    
+    margin-top: 0; 
 }
 
 
@@ -454,7 +454,7 @@ video {
     
 #image {        
     right: 0;
-    
+    margin-left: 0;
     margin-bottom: 40px;
     margin-top: 17px;    
     position: absolute; 
