--- a/css/alg1.css
+++ b/css/alg1.css
@@ -80,12 +80,12 @@ background-color: #1899D6;
   }
   
   #video-player {
-    width: 60%;
+    width: 53%;
     height: auto;
     margin: 0 auto;
     display: block;
     border-radius: 10px;
-    margin-top: 20px;
+    margin-top: 0;
   }
 
 
@@ -173,7 +173,7 @@ background-color: #1899D6;
   }
   
   #page {
-    max-width: 800px;
+    max-width: 90%;
     font-family: 'Pangolin';
     font-size: 20px;
     background: #fff;
