--- a/css/design.css
+++ b/css/design.css
@@ -77,8 +77,8 @@ body {
     overflow: hidden;
     cursor: pointer;
     transition: .5s;
-    font-weight: 400;
-    font-size: 17px;
+    font-weight: bold;
+    font-size: 20px;   
     border: 1px solid;
     font-family: 'Pangolin';
     text-transform: uppercase;
