--- a/css/design.css
+++ b/css/design.css
@@ -72,7 +72,7 @@ body {
     --color:  #55acff;
     padding: 0.8em 1.7em;
     background-color: transparent;
-    border-radius: 50%;
+    border-radius: 10px;
     position: relative;
     overflow: hidden;
     cursor: pointer;
