--- a/css/design.css
+++ b/css/design.css
@@ -419,6 +419,7 @@ video {
     font-size: 24px;
     font-weight: bold;
     margin-bottom: 30px;
+    color: white;
 }
 
 @media (max-width: 748px) {
